other-mpol/remove-hostpath-volumes/.kyverno-test/exception-resource.yaml
apiVersion: v1
kind: Pod
metadata: {name: exception-pod, namespace: team-a}
spec:
  containers: [{name: app, image: nginx:latest, volumeMounts: [{name: host, mountPath: /host}]}]
  volumes: [{name: host, hostPath: {path: /var/lib}}]
