other-mpol/remove-hostpath-volumes/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: remove-hostpath-volumes
policies:
- ../remove-hostpath-volumes.yaml
resources:
- resource.yaml
- exception-resource.yaml
exceptions:
- exception.yaml
results:
- kind: Pod
  patchedResources: patchedResource.yaml
  policy: remove-hostpath-volumes
  resources:
  - busybox
  result: pass
  isMutatingPolicy: true
- kind: Pod
  policy: remove-hostpath-volumes
  resources: [exception-pod]
  result: skip
  isMutatingPolicy: true
